# rmstuff

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: analysis.rs  config.rs  detectors.rs  error.rs  main.rs  size.rs
src/detectors/: javascript.rs  mod.rs
