[package]
name = "rmstuff"
version = "0.1.0"
authors = ["Stjepan Golemac <stjepan@tray.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.5.0", features = ["unstable"] }
futures = "0.3.4"
structopt = "0.3.12"
trait-async = "0.1.24"
